# rust_chatbot_ui

./: .gitignore  Cargo.toml  README.md  settings.ini
chat_history/: 1622185000.txt  1723251889.txt  1723252008.txt  1723252018.txt  1723255651.txt  1723256787.txt  1723260674.txt  1723261634.txt  1723267225.txt  1723270352.txt  1723307553.txt  1723417748.txt  1723419253.txt  1723422305.txt  1723423122.txt  1723426697.txt  1723526257.txt  1723530819.txt  1723606598.txt  1723614272.txt  1723666173.txt  1723666201.txt  1723675923.txt  1723681831.txt  1723681965.txt  1723682706.txt  1723682751.txt  1723682761.txt  1723684826.txt  1723686774.txt  1723690369.txt  1723694477.txt  1723695194.txt  1723695208.txt  1723695516.txt  1723695524.txt  1723695634.txt  1723695676.txt  1723697394.txt  1723697447.txt  (+56 more)
src/: app.rs  chat.rs  chat_history.rs  chatbot.rs  main.rs  message.rs  settings.rs  ui.rs
src/api/: client.rs
src/app/: app_initialization.rs  app_state.rs  app_ui.rs  app_updates.rs  icons.rs  mod.rs  state.rs
src/app/state/: chat_history.rs  (+2 more)
src/chat/: chat_core.rs  chat_name_generation.rs  chat_operations.rs  file_operations.rs  history.rs  history_manager.rs  message_handler.rs  mod.rs  processing.rs  ui_rendering.rs
src/chat_bot/: message.rs  mod.rs  ui.rs
src/providers/: base_provider.rs  claude.rs  fireworks.rs  gpt.rs  mod.rs  none.rs
src/settings/: mod.rs  settings_operations.rs  settings_ui.rs
src/ui/: bottom_panel.rs  chatbot_ui.rs  input_area.rs  message_view.rs  mod.rs  model_selector.rs  provider_selector.rs  syntax_highlighter.rs  theme.rs
(+5 files in other folders)
