[package]
name = "rust_chatbot_ui"
version = "0.4.1"
edition = "2021"

[dependencies]
eframe = "0.28.0"
egui = "0.28.0"
keyring = "2.0.1"
image = "0.24.6"
rfd = "0.11"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
winit = "0.28"